--- a/package.json
+++ b/package.json
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.5.2",
+    "@tailwindcss/forms": "^0.5.6",
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "framer-motion": "^10.16.4",
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.0.1",
+    "next-auth": "^4.24.4",
+    "primereact": "^10.0.9",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "prisma": "^5.5.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
