--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "primereact": "^10.0.9",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -30,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/seedrandom": "^3.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
