--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.11.0",
-    "seedrandom": "^3.0.5"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
