--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
